fix(abc:st): fix style misalignment in small screen when set scroll

--- a/packages/theme/system/antd/_table.less
+++ b/packages/theme/system/antd/_table.less
@@ -53,6 +53,10 @@
       }
     }
     .@{ant-prefix}-table {
+      table {
+        width: auto !important;
+        table-layout: auto !important;
+      }
       &-thead {
         display: none;
       }
